--- a/bio/index.html
+++ b/bio/index.html
@@ -137,7 +137,7 @@
         /></a>
 
         <a
-          href="https://vialab.science.uoit.ca/portfolio/erik-paluka"
+          href="https://vialab.ca/portfolio/erik-paluka"
           target="_blank"
           title="vialab Research Group"
         >
@@ -247,10 +247,7 @@
               <li>Supervised by: Dr. Christopher Collins</li>
               <li>
                 Research Lab:
-                <a
-                  href="http://vialab.science.uoit.ca/"
-                  title="vialab"
-                  target="_blank"
+                <a href="http://vialab.ca/" title="vialab" target="_blank"
                   >vialab</a
                 >
               </li>
@@ -271,10 +268,7 @@
               <li>Supervised by: Dr. Christopher Collins</li>
               <li>
                 Research Lab:
-                <a
-                  href="http://vialab.science.uoit.ca/"
-                  title="vialab"
-                  target="_blank"
+                <a href="http://vialab.ca/" title="vialab" target="_blank"
                   >vialab</a
                 >
               </li>
