--- a/bio/index.html
+++ b/bio/index.html
@@ -247,7 +247,7 @@
               <li>Supervised by: Dr. Christopher Collins</li>
               <li>
                 Research Lab:
-                <a href="http://vialab.ca/" title="vialab" target="_blank"
+                <a href="https://vialab.ca/" title="vialab" target="_blank"
                   >vialab</a
                 >
               </li>
@@ -268,7 +268,7 @@
               <li>Supervised by: Dr. Christopher Collins</li>
               <li>
                 Research Lab:
-                <a href="http://vialab.ca/" title="vialab" target="_blank"
+                <a href="https://vialab.ca/" title="vialab" target="_blank"
                   >vialab</a
                 >
               </li>
