--- a/bio/index.html
+++ b/bio/index.html
@@ -175,7 +175,12 @@
             >Publications</a
           >
           <a class="nav-item" itemprop="name" href="/research/">Research</a>
-          <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/">Bio</a>-->
+          <a
+            class="nav-item-current"
+            itemprop="name"
+            href="https://erikpaluka.com/bio/"
+            >Bio</a
+          >
           <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/blog/">Blog</a>-->
           <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/algorithms/">Algorithms</a>-->
 
@@ -238,10 +243,11 @@
             <ul>
               <li>
                 <a
-                  href="http://www.gradstudies.uoit.ca/"
-                  title="UOIT Graduate Studies"
+                  href="https://gradstudies.ontariotechu.ca/"
+                  title="OTU Graduate Studies"
                   target="_blank"
-                  >Univerisity of Ontario Institute of Technology (UOIT)</a
+                  >Ontario Tech University (OTU) previously the Univerisity of
+                  Ontario Institute of Technology (UOIT)</a
                 >
               </li>
               <li>Supervised by: Dr. Christopher Collins</li>
@@ -259,10 +265,11 @@
             <ul>
               <li>
                 <a
-                  href="http://www.gradstudies.uoit.ca/"
-                  title="UOIT Graduate Studies"
+                  href="https://gradstudies.ontariotechu.ca/"
+                  title="OTU Graduate Studies"
                   target="_blank"
-                  >Univerisity of Ontario Institute of Technology (UOIT)</a
+                  >Ontario Tech University (OTU) previously the Univerisity of
+                  Ontario Institute of Technology (UOIT)</a
                 >
               </li>
               <li>Supervised by: Dr. Christopher Collins</li>
@@ -278,10 +285,11 @@
 
         <div id="researchInterests">
           <div style="font-size: 1.5em">
-            Research Interests &amp; Focus of Work
+            Graduate School Research Interests &amp; Focus of Work
           </div>
           <div class="columns" id="reInterestsCol">
-            My research interests lie within the realm of human-computer
+            During my time in the vialab computer science research lab, my
+            research interests were focused within the realm of human-computer
             interaction (HCI). Specifically
             <ul>
               <li>Natural user interfaces (NUI)</li>
@@ -293,21 +301,21 @@
               <li>User experience</li>
               <li>User interface design</li>
             </ul>
-
-            My work focuses on designing and developing interactive software
+            <br />
+            My work focused on designing and developing interactive software
             systems by employing user-centered design processes and evaluating
             them by designing and conducting research studies with human
             participants.
-            <br /><br />
+            <!-- <br /><br />
             I am a former member of the vialab research reading group at UOIT.
             <a href="../papers.php">Click here</a> to see a subset of the
             Computer Science research papers that I have read in-depth.
             <br /><br /><br />
-            <br />
+            <br /> -->
           </div>
         </div>
 
-        <div style="height: 185px; padding: 20px">
+        <!-- <div style="height: 185px; padding: 20px">
           I am a full stack JavaScript developer (front-end &amp; back-end), and
           I generally develop using these languages/APIs:
           <ul>
@@ -323,7 +331,7 @@
               <a href="http://processing.org/" target="_blank">Processing</a>
             </li>
           </ul>
-        </div>
+        </div> -->
 
         <div style="height: 510px; padding: 20px">
           I have attended the following research conferences
